fix(refactor): fix imports and null return